language/move-lang/tests/move_check/typing/constraints_not_satisfied_function_return_type.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_function_return_type.move:2:20 ───
   │
 5 │     foo():  CupC<R> {
   │             ^^^^^^^ Constraint not satisfied. The resource type '0000000000000000000000000000000000000000000000000000000008675309.M.R' does not satisfy the constraint 'copyable'
   ·
 3 │     resource struct R {}
   │     -------- The type's constraint information was declared here
   ·
 2 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
   │

